# techops

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  search.html
docs/: example-data-documentation-voc-skin-tones.md  example-model-documentation-alisnet.md  index.md  template-application-documentation.md  template-data-documentation.md  template-model-documentation.md
docs/other-templates/: zalando-data-card-template.md  zalando-model-card-template.md
example-data-documentation-voc-skin-tones/: index.html
example-model-documentation-alisnet/: index.html
other-templates/zalando-data-card-template/: index.html
other-templates/zalando-model-card-template/: index.html
search/: search_index.json
template/: application documentation.md  data documentation.md  documentation template (deprecated).md  model documentation.md
template-application-documentation/: index.html
template-data-documentation/: index.html
template-model-documentation/: index.html
