[build-system]
requires = ["setuptools>=67.0.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "techops"
dynamic = ['version', 'readme']
description = "Guidelines and templates for responsible and AI-Act complaint documentation of AI/ML systems."
authors = [
    { name = 'Laura Lucaj', email='laura.lucaj@argmax.org' },
    { name = 'Alex Loosley', email='aloosley@alumni.brown.edu' },
    { name = 'Håkan Jonsson', email='hakan.jonsson@zalando.de' },
    { name = 'Patrick van der Smagt', email='smagt@argmax.org' },
]
requires-python = '>=3.12'
dependencies = [
    "mkdocs>=1.1.2",
    "mkdocs-material>=7.1.4",
    "mkdocs-redirects>=1.0.3",
    "mkdocs-git-revision-date-localized-plugin>=0.9.2",
    "mkdocs-git-authors-plugin>=0.3.3",
    "mkdocs-rtd-dropdown>=1.0.0",
    "pymdown-extensions>=9.11"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.2",
    "safety>=2.3.5",
]
all = ["techops[dev]"]

[tool.setuptools.dynamic]
version = {attr = "techops.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["techops"]
